Actions
Bug #9394
closedformat: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
analyze.c:248:12: error: this statement may fall through [-Werror=implicit-fallthrough=] flags |= SCAN_PURGE_READ_PASS; analyze.c:249:5: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0834baa77af16c1d9672ea0d0650f877cc0b07d8
commit 0834baa77af16c1d9672ea0d0650f877cc0b07d8 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9394 format: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: C Fraire <cfraire@me.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions